FIX : sidebar changes and dark mode

--- a/src/map/core/mapControls.css
+++ b/src/map/core/mapControls.css
@@ -18,7 +18,6 @@
     border-radius: 10px !important;
     border: 1px solid #e2e8f0 !important;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06) !important;
-    overflow: hidden;
 }
 
 .dark .maplibregl-ctrl-group {
